--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   "keywords": [
     "Twilio",
     "Hapi",
-    "authentication"
+    "authentication",
+    "scheme"
   ],
   "author": "Andy B",
   "license": "MIT",
   "devDependencies": {
     "chai": "^1.9.1",
-    "mocha": "^1.21.4",
     "gulp": "^3.8.7",
     "gulp-jshint": "^1.8.4",
-    "hapi": "^6.5.1"
+    "hapi": "^6.5.1",
+    "mocha": "^1.21.4"
   },
   "dependencies": {
     "boom": "^2.5.1",
